syntax = "proto3";

package envoymobile.extensions.filters.http.test_event_tracker;

message TestEventTracker {
  // The attributes to report as part of envoy event emitted by `TestEventTrackerFilter` filter.
  map<string, string> attributes = 1;
}
